--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <title>MaterialDemo</title>
   <base href="/">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="mat-app-background mat-typography">
   <app-root></app-root>
 </body>
 </html>
